Add product single page entity and refactor bunch of stuff

--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -49,6 +49,7 @@
               [options]="loadBalancerService.entities$ | async"
               [selected]="entity.loadBalancer"
               [placeholder]="'Load Balancer'"
+              [required]="true"
               [disabled]="viewMode"
               [mapper]="loadBalancerMapper"
               (onSelect)="entity.loadBalancer = $event">
