--- a/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
+++ b/src/app/pages/customers-page/customer-view/credit-card-input/credit-card-input.component.html
@@ -9,14 +9,21 @@
   </div>
 
   <div class="customer-view__edit__info">
-    <md-input placeholder="Name on Card" [(ngModel)]="ccard.name"></md-input>
+    <md-input required placeholder="Name on Card" [(ngModel)]="ccard.name"></md-input>
     <input-credit-card [value]="ccard.ccnumber" [placeholder]="'Credit Card Number'" (result)="ccard.ccnumber = $event"></input-credit-card>
     <input-credit-card [value]="ccard.ccv" [mode]="'ccv'" [placeholder]="'CCV'" (result)="ccard.ccv = $event"></input-credit-card>
 
     <div class="customer-view__edit__info__expiration">
       <div class="customer-view__edit__info__expiration__item">
         <span class="customer-view__edit__info__expiration__item__title">Expiration Date Month</span>
-        <dropdown-component [showFloatingPlaceholder]="false" [selected]="expirationMonth" [placeholder]="'MM'" [options]="months" (onSelect)="selectMonth($event)"></dropdown-component>
+        <dropdown-component
+          [showFloatingPlaceholder]="false"
+          [selected]="expirationMonth"
+          [required]="true"
+          [placeholder]="'MM'"
+          [options]="months"
+          (onSelect)="selectMonth($event)">
+        </dropdown-component>
       </div>
 
       <div class="customer-view__edit__info__expiration__item">
@@ -28,17 +35,17 @@
 
   <div class="customer-view__edit__address">
     <div class="customer-view__edit__address__title">Billing Address</div>
-    <md-input placeholder="Address 1" [(ngModel)]="ccard.address.line1"></md-input>
+    <md-input required placeholder="Address 1" [(ngModel)]="ccard.address.line1"></md-input>
     <md-input placeholder="Address 2" [(ngModel)]="ccard.address.line2"></md-input>
 
     <div class="customer-view__edit__address__group">
-      <md-input placeholder="City" [(ngModel)]="ccard.address.city"></md-input>
-      <dropdown-component [selected]="ccard.address.state" [placeholder]="'State'" (onSelect)="ccard.address.state = $event" [options]="states"></dropdown-component>
+      <md-input required placeholder="City" [(ngModel)]="ccard.address.city"></md-input>
+      <dropdown-component [required]="true" [selected]="ccard.address.state" [placeholder]="'State'" (onSelect)="ccard.address.state = $event" [options]="states"></dropdown-component>
     </div>
 
     <div class="customer-view__edit__address__group">
-      <md-input placeholder="Postal Code" [(ngModel)]="ccard.address.zip"></md-input>
-      <dropdown-component [selected]="ccard.address.country" [placeholder]="'Country'"  (onSelect)="ccard.address.country = $event" [options]="['USA']"></dropdown-component>
+      <md-input required placeholder="Postal Code" [(ngModel)]="ccard.address.zip"></md-input>
+      <dropdown-component [required]="true" [selected]="ccard.address.country" [placeholder]="'Country'"  (onSelect)="ccard.address.country = $event" [options]="['USA']"></dropdown-component>
     </div>
   </div>
 
