--- a/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
@@ -45,7 +45,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let product of transaction.products" [routerLink]="['/products', product.id]">
+        <tr *ngFor="let product of transaction.products" [routerLink]="['/products', product.product.id]">
           <td>{{product.product.name}}</td>
           <td class="cell--align-right">{{product.amount.usd()}}</td>
           <td>{{product.shippingReceipt.status}}</td>
