--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -579,7 +579,7 @@ $blue-color: #4A90E2;
     }
 
     &__content {
-      padding: 15px;
+      padding: 15px 15px 25px;
       display: flex;
       flex-direction: column;
 
