--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
@@ -1,7 +1,15 @@
 .product-schedule-view {
-  margin: 25px;
 
-  div {
-    margin-top: 15px;
+  &__container {
+    font-size: 14px;
+
+    md-input-container {
+      width: 100px;
+      margin-right: 16px;
+    }
+
+    autocomplete-input {
+      margin-right: 55px;
+    }
   }
 }
