--- a/src/app/pages/product-schedule-page/product-schedules.component.html
+++ b/src/app/pages/product-schedule-page/product-schedules.component.html
@@ -1,12 +1,11 @@
 <div #indexR class="entity-index">
-  <product-schedule *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></product-schedule>
 
   <div class="entity-index__title">
     Product Schedules
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/productschedules', 'add']"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
