--- a/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
+++ b/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
@@ -3,13 +3,13 @@
     <md-input-container>
       <input #input md-input placeholder="{{placeholder}}" type="text" (focus)="showOptions = true" [(ngModel)]="currentValue">
     </md-input-container>
-    <md-icon (click)="clearCurrentValue(input)">cancel</md-icon>
+    <md-icon *ngIf="showCancelButton" (click)="clearCurrentValue(input)">cancel</md-icon>
   </div>
-  <div class="default-autocomplete-input__options" *ngIf="showOptions && (options | filterStrings : currentValue).length > 0">
+  <div class="default-autocomplete-input__options" *ngIf="showOptions && (options | filterStrings : currentValue: mapFunction).length > 0">
     <div class="default-autocomplete-input__options__item"
-         *ngFor="let option of options | filterStrings : currentValue"
+         *ngFor="let option of options | filterStrings : currentValue : mapFunction"
          (click)="optionSelected(option)">
-      {{option}}
+      {{mapFunction(option)}}
     </div>
   </div>
 </div>
