--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -546,6 +546,7 @@ $blue-color: #4A90E2;
     background: white;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
     min-width: 300px;
+    vertical-align: top;
 
     &--large {
       margin-bottom: 50px;
