--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
@@ -12,4 +12,18 @@
       margin-right: 55px;
     }
   }
+
+  md-input-container {
+    font-size: 14px;
+  }
+
+  &__details {
+    md-input-container {
+      font-size: 14px;
+    }
+
+    &__actions {
+      margin-top: 48px;
+    }
+  }
 }
