--- a/src/assets/scss/_advanced-filter.scss
+++ b/src/assets/scss/_advanced-filter.scss
@@ -90,8 +90,13 @@ $color-orange: #F16C00;
   }
 
   &__group-by {
+    position: relative;
     display: inline-block;
-    margin: 20px;
+    margin: 0 20px;
+
+    dropdown-component {
+      position: static;
+    }
 
     @media only screen and (max-width: 1440px) {
       margin: 10px;
